:art: Fix multi-line wrapping with css

--- a/styles/bottom-panel.less
+++ b/styles/bottom-panel.less
@@ -22,3 +22,7 @@
 .sb-table.linter td, .sb-table.linter th {
   padding: 3px 10px;
 }
+
+.sb-table.linter td {
+  min-width: 100px;
+}
